--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lange="en">
+
+<body>
+    <div id="root"></div>
+
+    <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
+    <script src="js/build/bundle.js"></script>
+</body>
+
+</html>
