--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lange="en">
 
 <body>
-    <div id="root"></div>
+<header>Maciej Zawiasa</header>
 
-    <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
-    <script src="js/build/bundle.js"></script>
 </body>
 
 </html>
