--- a/ireal-text-editor/index.html
+++ b/ireal-text-editor/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lange="en">
 
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+    </style>
+</head>
+
 <body>
     <div id="root"></div>
 
