--- a/ireal-text-editor/index.html
+++ b/ireal-text-editor/index.html
@@ -8,6 +8,15 @@
             font-family: 'Roboto', sans-serif;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112672250-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-112672250-1');
+    </script>
 </head>
 
 <body>
