--- a/ireal-text-editor/index.html
+++ b/ireal-text-editor/index.html
@@ -1,30 +1,7 @@
-<!DOCTYPE html>
-<html lange="en">
-
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <style>
-        body {
+<!DOCTYPE html><html lange="en"><head><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"><style>body {
             font-family: 'Roboto', sans-serif;
-        }
-    </style>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112672250-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+        }</style><script async src="https://www.googletagmanager.com/gtag/js?id=UA-112672250-1"></script><script>window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'UA-112672250-1');
-    </script>
-</head>
-
-<body>
-    <div id="root"></div>
-
-    <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
-    <script src="js/build/bundle.js"></script>
-</body>
-
-</html>
+        gtag('config', 'UA-112672250-1');</script></head><body><div id="root"></div><script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script><script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script><script type="text/javascript" src="app/build/vendor.cef3fdb9.js"></script><script type="text/javascript" src="app/build/main.0e8434ce.js"></script></body></html>
