--- a/ireal-text-editor/index.html
+++ b/ireal-text-editor/index.html
@@ -4,4 +4,13 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'UA-112672250-1');</script></head><body><div id="root"></div><script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script><script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script><script type="text/javascript" src="app/build/vendor.26c11eff.js"></script><script type="text/javascript" src="app/build/main.41d186a2.js"></script></body></html>
+        gtag('config', 'UA-112672250-1');</script><script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script><script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script><script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script><script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script><script>// Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
+            authDomain: "ireal-text-editor.firebaseapp.com",
+            databaseURL: "https://ireal-text-editor.firebaseio.com",
+            projectId: "ireal-text-editor",
+            storageBucket: "ireal-text-editor.appspot.com",
+            messagingSenderId: "1060242801088"
+        };
+        firebase.initializeApp(config);</script></head><body><div id="root"></div><script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script><script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script><script type="text/javascript" src="app/build/vendor.ff0d58ae.js"></script><script type="text/javascript" src="app/build/main.833900a3.js"></script></body></html>
