--- a/ireal-text-editor/index.html
+++ b/ireal-text-editor/index.html
@@ -7,7 +7,7 @@
             gtag('config', 'UA-112672250-1');</script><script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script><script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-app.js"></script><script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-auth.js"></script><script src="https://www.gstatic.com/firebasejs/4.8.2/firebase-database.js"></script><script>// Initialize Firebase
                 var config = {
                     apiKey: "AIzaSyDuFMhGDCnLynLD-HLg5gzDY1x1-KZpssg",
-                    authDomain: "zawiasam.github.io",
+                    authDomain: "zawiasam.github.io/ireal-text-editor/",
                     databaseURL: "https://ireal-text-editor.firebaseio.com",
                     projectId: "ireal-text-editor",
                     storageBucket: "ireal-text-editor.appspot.com",
