--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <body>
 <header>Maciej Zawiasa</header>
-
+<main>
+<a href="/ireal-text-editor/">iReal Pro text editor</a>
+</main>
 </body>
 
 </html>
