--- a/ireal-text-editor/index.html
+++ b/ireal-text-editor/index.html
@@ -1,41 +1,7 @@
-<!DOCTYPE html>
-<html lange="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="iReal Pro Online Text Editor">
-    <meta name="keywords" content="iReal,iReal Pro,Text editor,JavaScript">
-    <meta name="author" content="Maciej Zawiasa">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <style>
-        body {
+<!DOCTYPE html><html lange="en"><head><meta charset="UTF-8"><meta name="description" content="iReal Pro Online Text Editor"><meta name="keywords" content="iReal,iReal Pro,Text editor,JavaScript"><meta name="author" content="Maciej Zawiasa"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"><style>body {
             font-family: 'Roboto', sans-serif;
-        }
-    </style>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112672250-1"></script>
-    <script>window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+        }</style><script async src="https://www.googletagmanager.com/gtag/js?id=UA-112672250-1"></script><script>window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
 
-        gtag('config', 'UA-112672250-1');</script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
-    <link href="app/build/main-489b8573.css" rel="stylesheet">
-</head>
-
-<body>
-    <div id="root"></div>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script type="text/javascript" src="app/build/app-common.489b8573.js"></script>
-    <script type="text/javascript" src="app/build/ui-libs.8d796441.js"></script>
-    <script type="text/javascript" src="app/build/vendor.1272f5c2.js"></script>
-    <script type="text/javascript" src="app/build/main.489b8573.js"></script>
-    <script type="text/javascript" src="app/build/config.489b8573.js"></script>
-</body>
-
-</html>
+            gtag('config', 'UA-112672250-1');</script><script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script><script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-app.js"></script><script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-auth.js"></script><script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-database.js"></script><script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script><link href="app/build/main-2a2d8677.css" rel="stylesheet"></head><body><div id="root"></div><script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script><script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script><script type="text/javascript" src="app/build/app-common.2a2d8677.js"></script><script type="text/javascript" src="app/build/ui-libs.8d796441.js"></script><script type="text/javascript" src="app/build/vendor.1272f5c2.js"></script><script type="text/javascript" src="app/build/main.2a2d8677.js"></script><script type="text/javascript" src="app/build/config.2a2d8677.js"></script></body></html>
